--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ __pycache__/
 local_settings.py
 db.sqlite3
 media/*
-hashx/media/
+imrdb/media/
 
 .env_server
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
