--- a/imrdb/requirements.txt
+++ b/imrdb/requirements.txt
@@ -1,4 +1,21 @@
+anyjson==0.3.3
 asgiref==3.2.10
+astroid==2.4.2
 Django==3.1
+django-admin-generator==2.2.0
+django-braces==1.14.0
+django-model-utils==4.0.0
+django-utils2==2.8.0
+isort==5.4.2
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+Pillow==7.2.0
+pylint==2.6.0
+python-utils==2.4.0
 pytz==2020.1
+six==1.15.0
 sqlparse==0.3.1
+swapper==1.1.2.post1
+toml==0.10.1
+typed-ast==1.4.1
+wrapt==1.12.1
