--- a/imrdb/requirements.txt
+++ b/imrdb/requirements.txt
@@ -1,21 +1,48 @@
 anyjson==0.3.3
+appnope==0.1.0
 asgiref==3.2.10
 astroid==2.4.2
+backcall==0.2.0
+decorator==4.4.2
 Django==3.1
 django-admin-generator==2.2.0
 django-braces==1.14.0
 django-model-utils==4.0.0
 django-utils2==2.8.0
+future==0.18.2
+importlib-metadata==1.7.0
+ipykernel==5.3.4
+ipython==7.18.1
+ipython-genutils==0.2.0
 isort==5.4.2
+jedi==0.17.2
+jupyter-client==6.1.7
+jupyter-core==4.6.3
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+numpy==1.19.2
+pandas==1.1.2
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==7.2.0
+prompt-toolkit==3.0.7
+ptyprocess==0.6.0
+Pygments==2.7.0
 pylint==2.6.0
+python-dateutil==2.8.1
 python-utils==2.4.0
 pytz==2020.1
+pyzmq==19.0.2
 six==1.15.0
 sqlparse==0.3.1
 swapper==1.1.2.post1
 toml==0.10.1
+torch==1.6.0
+torchvision==0.7.0
+tornado==6.0.4
+traitlets==5.0.4
 typed-ast==1.4.1
+wcwidth==0.2.5
 wrapt==1.12.1
+zipp==3.1.0
