--- a/imrdb/requirements.txt
+++ b/imrdb/requirements.txt
@@ -4,7 +4,7 @@ asgiref==3.2.10
 astroid==2.4.2
 backcall==0.2.0
 decorator==4.4.2
-Django==3.1
+Django>=3.1
 django-admin-generator==2.2.0
 django-braces==1.14.0
 django-model-utils==4.0.0
@@ -25,7 +25,7 @@ pandas==1.1.2
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.2.0
+Pillow>=7.2.0
 prompt-toolkit==3.0.7
 ptyprocess==0.6.0
 Pygments==2.7.4
